# FlamAndroid

./: .gitignore  README.md
MyFlamCvGl/: settings.gradle.kts
MyFlamCvGl/app/: build.gradle.kts
MyFlamCvGl/app/src/androidTest/java/com/example/myflamcvgl/: ExampleInstrumentedTest.kt
MyFlamCvGl/app/src/main/: AndroidManifest.xml
MyFlamCvGl/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_utils.cpp  opencv_utils.h
MyFlamCvGl/app/src/main/java/com/example/myflamcvgl/: BitMapRenderer.kt  MainActivity.kt  WebServer.kt
MyFlamCvGl/app/src/main/res/layout/: activity_main.xml
MyFlamCvGl/app/src/main/res/values/: strings.xml  themes.xml
MyFlamCvGl/app/src/main/res/values-night/: themes.xml
MyFlamCvGl/app/src/test/java/com/example/myflamcvgl/: ExampleUnitTest.kt
MyFlamCvGl/gradle/wrapper/: gradle-wrapper.properties
WebViewFlam/: index.html  package-lock.json  package.json
WebViewFlam/src/: App.css  App.tsx
